add science team, update hyperlink

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@ nav a {
 	<li>First General Meeting of Spring 2025 @ 4pm on Monday 2025-02-03 in HSU 1.202
 	<li>Project Workshops
 	<li>Weekly URC Sub-team Meetings
+	<ul>
+		<li>Science Mission: Tuesdays @ 6pm in AET 1.202
+	</ul>
 </ul>
 
 <h2 id="wiki">Wiki</h2>
@@ -109,7 +112,7 @@ nav a {
 <ul>
 	<li>🚀 Join Today!: <a href="https://utsa.campuslabs.com/engage/organization/ras">RowdyLink</a>
 	<li>📧 Email: <a href="mailto:robotics.utsa@gmail.com">Gmail</a>
-	<li>🤖 Discord: <a href="https://discord.gg/VubfsfkFZF">Robotics and Automation Society at UTSA</a>
+	<li>🤖 Discord: <a href="https://discord.gg/VubfsfkFZF">RAS at UTSA</a>
 	<li>📸 Instagram: <a href="https://www.instagram.com/ras_utsa/">@utsa_ras</a>
 	<li>💸 Payment (CashApp): <a href="https://cash.app/$RASUTSA">$rasutsa</a>
 </ul>
