--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@ nav a {
 <p> 📅 <a href="http://bit.ly/47V4Cxc">Google Calendar</a>
 <p>Upcoming events:
 <ul>
-	<li>First General Meeting of Spring 2025 @ 4pm on Monday 2025-02-03 in HSU 1.202
+	<li>First General Meeting @ 4pm on Monday 2025-02-03 in HSU 1.202
 	<li>Project Workshops
 	<li>Weekly URC Sub-team Meetings
 	<ul>
-		<li>Science Mission: Tuesdays @ 6pm in AET 1.202
+		<li>Mechanical Team: Fridays @ 1:30PM in AET 1.202
+		<li>Science Mission: Tuesdays @ 6:00pm in AET 1.202
 	</ul>
 </ul>
 
