--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ nav a {
 	<li>📧 Email: <a href="mailto:robotics.utsa@gmail.com">Gmail</a>
 	<li>🤖 Discord: <a href="https://discord.gg/VubfsfkFZF">RAS at UTSA</a>
 	<li>📸 Instagram: <a href="https://www.instagram.com/ras_utsa/">@utsa_ras</a>
-	<li>💸 Payment (CashApp): <a href="https://cash.app/$RASUTSA">$rasutsa</a>
+	<li>💸 Payment (CashApp): <a href="https://cash.app/$UTSARAS">$UTSARAS</a>
 </ul>
 
 <footer>
